--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,40 +1,28 @@
-name: Deploy to AWS S3
+name: Node.js CI Dev
+
 on:
   push:
     branches:
-      - main
+      - "main"
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x, 18.x]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.12.1
+          cache: "yarn"
+      - run: yarn install
+      - run: |
+          yarn run build
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ap-southeast-1
+      - run: |
+          aws s3 sync --delete dist/ s3://online-communities
 
-      - name: Deploy static site to S3 bucket
-        run: aws s3 sync dist/ s3://online-communities --delete
