--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression-webpack-plugin": "^11.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "cypress": "^13.8.1",
     "dotenv-webpack": "^8.0.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.26.0",
@@ -57,7 +58,13 @@
     "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@my-library/react-components": "https://github.com/dnhieu1992/react-ui.git",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
