--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/src/lib/*/node_modules
-/.pnp
-.pnp.js
-*.icloud
-/**/screenshots
-/**/videos
-.cache
-.vscode
-# testing
-/coverage
-
-# production
-/build
-/dist
-
-# misc
+node_modules
 .DS_Store
-.env.local
+/dist
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
