--- a/apps/sm-chat/package.json
+++ b/apps/sm-chat/package.json
@@ -1,26 +1,24 @@
 {
   "name": "sm-chat",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "webpack serve",
-    "build": "webpack --mode production",
-    "lint": "eslint src --ext .ts,.tsx"
+    "build": "webpack --mode production"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "react-router-dom": "^6",
-    "@mui/material": "^5"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "webpack": "^5",
-    "webpack-cli": "^5",
-    "webpack-dev-server": "^5",
-    "ts-loader": "^9",
-    "typescript": "^5",
-    "html-webpack-plugin": "^5",
-    "sass": "^1",
-    "css-loader": "^7",
-    "style-loader": "^4"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "html-webpack-plugin": "^5.6.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
