--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,14 @@
 {
-  "pipeline": {
-    "build": { "dependsOn": ["^build"], "outputs": ["dist/**"] },
-    "dev":   { "cache": false, "persistent": true },
+  "$schema": "https://turbo.build/schema.json",
+  "tasks": {
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
     "lint": {},
     "test": {}
   }
